Completed the Bible constructor.

--- a/Map/Map.vcxproj
+++ b/Map/Map.vcxproj
@@ -150,6 +150,9 @@
     <ClInclude Include="Verse.h" />
     <ClInclude Include="VerseKey.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="test.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
